src/custom/snapshots/hugr_llvm__custom__float__test__fdiv@pre-mem2reg@llvm14.snap
---
source: src/custom/float.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define double @_hl.main.1(double %0, double %1) {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca double, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"2_0", align 8
  store double %1, double* %"2_1", align 8
  %"2_01" = load double, double* %"2_0", align 8
  %"2_12" = load double, double* %"2_1", align 8
  %2 = fdiv double %"2_01", %"2_12"
  store double %2, double* %"4_0", align 8
  %"4_03" = load double, double* %"4_0", align 8
  store double %"4_03", double* %"0", align 8
  %"04" = load double, double* %"0", align 8
  ret double %"04"
}
